<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_titulo">Gasolina X Etanol</string>
    <string name="txt_gasolina">Gasolina</string>
    <string name="txt_etanol">Etanol</string>
    <string name="txt_button_calcular">CALCULAR</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_resultado">Resultado</string>
    <string name="txt_hint_edit_sobrenome0">Sobrenome</string>
    <string name="txt_hint_edit_orimeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do Curso</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de Contato</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_selecione_um_curso">Selecione o Curso</string>
    <string name="txt_qtd_litros">QTD Litros</string>
    <string name="txt_total_pagar">Total a Pagar</string>
    <string name="txt_km_atual">KM Atual</string>
    <string name="tbc_combustivel">Combust.</string>
    <string name="tbc_preco">Preço</string>
    <string name="tbc_litros">Litros</string>
    <string name="tbc_km_atual">KM</string>
    <string name="btn_melhor_opcao">Melhor opção</string>
    <string name="tbc_total">Total</string>
    <string name="tbc_km_consumo">KM Consumo</string>
    <string name="rb_gasolina">Gasolina</string>
    <string name="rb_etanol">Etanol</string>
    <string name="txt_historico_abastecimento">Histórico de Abastecimento</string>
</resources>